--- a/internal/configuration/configuration.json
+++ b/internal/configuration/configuration.json
@@ -2,7 +2,7 @@
   "ENVIRONMENT" : "development",
   "SERVER" : {
     "HOST" : "localhost",
-    "PORT" : "80"
+    "PORT" : ":8000"
   },
   "PSQL" : {
     "DRIVERNAME" : "postgres",
