--- a/internal/configuration/configuration.json
+++ b/internal/configuration/configuration.json
@@ -1,5 +1,5 @@
 {
-  "ENVIRONMENT" : "development",
+  "ENVIRONMENT" : "production",
   "SERVER" : {
     "HOST" : "localhost",
     "PORT" : ":8000"
